--- a/index.html
+++ b/index.html
@@ -1,130 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HomePage</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Login</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
-
 <body>
-    <section class="navbar-section">
-        <div>
-            <nav class=" navigation-bar navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="#"> <span class="q">Q</span><span class="tracker">TRACKER</span> </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
 
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Data Entry</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown"
-                                aria-expanded="false">
-                                Batches
-                            </a>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Web Tachnology</a>
-                                <a class="dropdown-item" href="#">Core Java</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">More Batches</a>
-                            </div>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">About</a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Contact Us</a>
-                        </li>
-
-                    </ul>
-                </div>
-            </nav>
-        </div>
-
-    </section>
-    <section class="body-section">
-        <div class="about-qspiders" align="center">
-            <h2 class="heading">Largest Software Training Organization</h2>
-            <p class="info"> QSpiders is the world’s ace software training organization with an aim to bridge the gap
-                between the demands of the industry and the curriculum of educational institutions.With centers across
-                the Globe, the institute is a platform where young minds are given the opportunity to build successful
-                careers.
-            </p>
-            <p class="info"> ”QSpiders is a place where businesses find talent and dreams take flight."</p>
-        </div>
-        <div class="carousel-placement" align="center">
-            <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active" data-interval="2500">
-                        <div class="image-carousel">
-                            <img src="./images/placed1.jpg" class="d-block placed-img" alt="...">
-                            <img src="./images/placed2.jpg" class="d-block placed-img" alt="...">
-                            <img src="./images/placed3.jpg" class="d-block placed-img" alt="...">
-                        </div>
-
-                    </div>
-                    <div class="carousel-item" data-interval="2500">
-                        <div class="image-carousel">
-                            <img src="./images/placed3.jpg" class="d-block placed-img" alt="...">
-                            <img src="./images/placed2.jpg" class="d-block placed-img" alt="...">
-                            <img src="./images/placed1.jpg" class="d-block placed-img" alt="...">
-                        </div>
-                    </div>
-                    <div class="carousel-item" data-interval="2500">
-                        <div class="image-carousel">
-                            <img src="./images/placed5.jpg" class="d-block placed-img" alt="...">
-                            <img src="./images/placed3.jpg" class="d-block placed-img" alt="...">
-                            <img src="./images/placed2.jpg" class="d-block placed-img" alt="...">
-                        </div>
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-target="#carouselExampleInterval"
-                    data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-target="#carouselExampleInterval"
-                    data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </button>
-            </div>
-            <div class="home-marquee">
-                <h2 class="heading">Placement Statistics </h2>
-                <div >
-                    <marquee behavior="" direction="" class="placed-count"> <span class="student-count">94860</span> Placed Students who have throughout 60% aggregate</marquee>
-                    <marquee behavior="" direction="" class="placed-count"> <span class="student-count">42992</span> Placed Students who have graduated in Non-IT</marquee>
-                    <marquee behavior="" direction="" class="placed-count"> <span class="student-count">68481</span> Placed Students who have graduated in IT/CS/IS</marquee>
-                    <marquee behavior="" direction="" class="placed-count"> <span class="student-count">15024</span> Placed Students who have less than 60% aggregate in Degree
-                    </marquee>
-
-                </div>
-            </div>
-        </div>
-
-    </section>
-    <section class="footer-section">
-
-    </section>
-
+	<div class="main-container">
+			<div class="login-form" align="center">
+				<h1 align="center" class="lgn">LOGIN</h1>
+				<form>
+					<input type="text" name="un" autofocus placeholder="USERNAME">
+					<input type="text" name="pass" placeholder="PASSWORD">
+					<br><br>
+					<a href="#">Forgot Password ? </a>
+					<input type="button" name="lgn" value="LOGIN" class="lgnbtn" onclick="checkCred()">
+					<br><br>
+					<a href="register.html">New User </a>
+				</form>
+				
+			</div>
+	</div>
+	<script type="text/javascript" src="index.js"></script>
 </body>
-
 </html>
